package com.vale.warehouses.auth.models;

public enum RoleType {
    Admin,
    Owner,
    Agent,
    Tenant
}
