@startuml

title __MODELS's Class Diagram__\n

  namespace com.vale.warehouses.auth.models {
    class UserEntity {
        - email : String
        - id : Long
        - password : String
        - passwordConfirm : String
        - roles : Set<RoleEntity>
        - username : String
        + getEmail()
        + getId()
        + getPassword()
        + getPasswordConfirm()
        + getRelatedOwner()
        + getRelatedSaleAgent()
        + getRelatedTenant()
        + getRoles()
        + getUsername()
        + setEmail()
        + setId()
        + setPassword()
        + setPasswordConfirm()
        + setRelatedOwner()
        + setRelatedSaleAgent()
        + setRelatedTenant()
        + setRoles()
        + setUsername()
    }

    class RoleEntity {
        - id : Long
        - name : String
        - users : Set<UserEntity>
        + getId()
        + getName()
        + getUsers()
        + setId()
        + setName()
        + setUsers()
    }

    enum RoleType {
      Admin
      Agent
      Owner
      Tenant
    }

    class TokenEntity {
        - expireAt : OffsetDateTime
        - id : String
        + getExpireAt()
        + getId()
        + getUUID()
        + getUser()
        + setExpireAt()
        + setId()
        + setUUID()
        + setUser()
    }
  }


  com.vale.warehouses.auth.models.TokenEntity o-left- com.vale.warehouses.auth.models.UserEntity : user
  com.vale.warehouses.auth.models.UserEntity o-- com.vale.warehouses.app.model.Owner : relatedOwner
  com.vale.warehouses.auth.models.UserEntity o-- com.vale.warehouses.app.model.SaleAgent : relatedSaleAgent
  com.vale.warehouses.auth.models.UserEntity o-- com.vale.warehouses.app.model.Tenant : relatedTenant


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
